# alloist

./: .env.example  .gitignore  Makefile  PHASE1_MVP.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_README.md  PHASE6_README.md  PHASE7_README.md  PHASE8_README.md  PHASE9_README.md  README.md  docker-compose.yml
backend/policy_service/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/policy_service/alembic/: env.py
backend/policy_service/alembic/versions/: 001_create_policies.py  002_create_evidence.py  003_add_dsl_to_policies.py  004_add_org_id.py  005_create_audit_logs.py  006_add_push_tokens.py
backend/policy_service/app/: config.py  consent_manager.py  database.py  main.py
backend/policy_service/app/api/: deps.py
backend/policy_service/app/auth/: jwt.py
backend/policy_service/app/cli/: create_policy.py
backend/policy_service/app/dsl/: __init__.py  compiler.py
backend/policy_service/app/models/: __init__.py  api_key.py  audit_log.py  evidence.py  org_usage.py  organization.py  organization_user.py  policy.py  push_token.py  subscription.py  token_ref.py
backend/policy_service/app/schemas/: audit.py  evidence.py  policy.py  policy_dsl.py
backend/policy_service/app/services/: audit_service.py  billing_service.py  evaluator.py  evidence_service.py  (+1 more)
backend/policy_service/scripts/: verify_evidence.py
backend/policy_service/tests/: conftest.py  test_audit.py  test_evaluator.py  test_evidence.py  test_policy_api.py  test_policy_dsl_compile.py  test_policy_dsl_integration.py  test_rbac.py
(+168 files in other folders)
