[project]
name = "policy-service"
version = "0.1.0"
description = "Policy Engine microservice for alloist"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "httpx>=0.26",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
policy-cli = "app.cli.create_policy:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
